<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.dashboard.create_password.CreatePasswordFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBack"
        style="@style/Text.Bold.BackBtn"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPasswordTxt"
        style="@style/Text.Bold.Large.TextColor"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/add_password"
        app:layout_constraintStart_toStartOf="@id/tvBack"
        app:layout_constraintTop_toBottomOf="@id/tvBack" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="@id/tvPasswordTxt"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordTxt">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            style="@style/Text.Bold.Small.TextColor"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/name"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etWebsite"
            style="@style/EditText.Text"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvName"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClearTextBtn"
            style="@style/ImageView.AddPassword"
            android:layout_marginEnd="@dimen/_5sdp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_cancle"
            app:layout_constraintBottom_toBottomOf="@id/etWebsite"
            app:layout_constraintEnd_toEndOf="@id/etWebsite"
            app:layout_constraintTop_toTopOf="@id/etWebsite" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="@id/tvPasswordTxt"
        app:layout_constraintTop_toBottomOf="@id/clName">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            style="@style/Text.Bold.Small.TextColor"
            android:text="@string/email_username"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/EditText.Text"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_name_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvEmail"
            app:layout_constraintTop_toBottomOf="@id/tvEmail" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClearEmailBtn"
            style="@style/ImageView.AddPassword"
            android:layout_marginEnd="@dimen/_5sdp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_cancle"
            app:layout_constraintBottom_toBottomOf="@id/etEmail"
            app:layout_constraintEnd_toEndOf="@id/etEmail"
            app:layout_constraintTop_toTopOf="@id/etEmail" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="@id/tvPasswordTxt"
        app:layout_constraintTop_toBottomOf="@id/clEmail">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPassTxt"
            style="@style/Text.Bold.Small.TextColor"
            android:text="@string/password_txt"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/EditText.Text"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvPassTxt"
            app:layout_constraintTop_toBottomOf="@id/tvPassTxt" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivShowPasswordBtn"
            style="@style/ImageView.AddPassword"
            android:layout_marginEnd="@dimen/_5sdp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_visiblity_on"
            app:layout_constraintBottom_toBottomOf="@id/etPassword"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            app:layout_constraintTop_toTopOf="@id/etPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="@id/tvPasswordTxt"
        app:layout_constraintTop_toBottomOf="@id/clPassword">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUrlTxt"
            style="@style/Text.Bold.Small.TextColor"
            android:text="@string/url"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUrl"
            style="@style/EditText.Text"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_url"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvUrlTxt"
            app:layout_constraintTop_toBottomOf="@id/tvUrlTxt" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClearUrlBtn"
            style="@style/ImageView.AddPassword"
            android:layout_marginEnd="@dimen/_5sdp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_cancle"
            app:layout_constraintBottom_toBottomOf="@id/etUrl"
            app:layout_constraintEnd_toEndOf="@id/etUrl"
            app:layout_constraintTop_toTopOf="@id/etUrl" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="@dimen/standard_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:backgroundTint="@color/btn_color"
        android:padding="@dimen/_17sdp"
        android:text="@string/create_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/clUrl"
        app:layout_constraintStart_toStartOf="@id/clUrl"
        app:layout_constraintTop_toBottomOf="@id/clUrl" />


</androidx.constraintlayout.widget.ConstraintLayout>