<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAlphabet"
        style="@style/Text.Bold.Small.TextColor"
        android:text="@string/a"
        android:textColor="@color/darkerGrey"
        android:textSize="@dimen/_18sdp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/tvAlphabet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_smoke"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCompanyLogoTxt"
                style="@style/Text.Bold.Medium.TextColor"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/white"
                android:gravity="center"
                android:src="@drawable/amazon_icon"
                android:text="@string/a"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCompanyLogo"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/amazon_icon"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/categoryName"
                style="@style/Text.Bold.Regular.TextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazon"
                android:inputType="textCapWords"
                android:gravity="center"
                android:visibility="visible"
                android:textSize="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:layout_marginStart="@dimen/_3sdp"
                app:layout_constraintStart_toEndOf="@id/ivCompanyLogo"
                app:layout_constraintTop_toTopOf="@id/ivCompanyLogo"
                app:layout_constraintBottom_toBottomOf="@id/ivCompanyLogo"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>